@@ -4,6 +4,7 @@ Version 1.0.8 (Januari xxth 2013)
 - implemented OWL113 Ampere Notifications
 - implemented P1 Energy Meter/P1 Gas Meter/YouLess, usage notification
 - implemented P1 Gas Meter/YouLess/RFXMeter, today notification
+- implemented P1 Energy Meter, today notification
 - Removed SQLite MFC runtime dependency
 
 Version 1.0.7 (Januari 18th 2013)
